--- a/src/components/calculatorContainer/calculatorContainer.css
+++ b/src/components/calculatorContainer/calculatorContainer.css
@@ -1,6 +1,34 @@
-.calc-container-div {
+.calc-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(6, 1fr);
   border-radius: 30px;
   border:2px solid black;
   height: 200px;
   width: 200px;
+}
+
+.display {
+  grid-column: 1/5; 
+}
+
+.AC, 
+.zero {
+  grid-column: 1/3;
+}
+
+.equal {
+  grid-column: 4/5;
+  grid-row: 5/7;
+}
+
+div {
+  border: 1px solid black;
+}
+
+/* make anchor tags take up full space of parent div */
+a {
+  display: inline-block;
+  height: 100%; 
+  width: 100%;
 }
