--- a/src/components/calculatorContainer/calculatorContainer.css
+++ b/src/components/calculatorContainer/calculatorContainer.css
@@ -3,13 +3,15 @@
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(6, 1fr);
   border-radius: 30px;
-  border:2px solid black;
-  height: 200px;
-  width: 200px;
+  /* border:2px solid black; */
+  height: 500px;
+  width: 400px;
+  /* padding: 10px; */
 }
 
 .display {
   grid-column: 1/5; 
+  border-radius: 30px 30px 0 0;
 }
 
 .AC, 
@@ -17,12 +19,17 @@
   grid-column: 1/3;
 }
 
+.zero {
+  border-bottom-left-radius: 30px;
+}
+
 .equal {
   grid-column: 4/5;
   grid-row: 5/7;
+  border-bottom-right-radius: 30px;
 }
 
-div {
+.grid-item {
   border: 1px solid black;
 }
 
