--- a/src/components/calculatorContainer/calculatorContainer.css
+++ b/src/components/calculatorContainer/calculatorContainer.css
@@ -31,6 +31,7 @@
 
 .grid-item {
   border: 1px solid black;
+  background: white;
 }
 
 /* make anchor tags take up full space of parent div */
@@ -38,4 +39,6 @@ a {
   display: inline-block;
   height: 100%; 
   width: 100%;
+  text-decoration: none;
+  /* background: white; */
 }
