--- a/src/components/calculatorContainer/calculatorContainer.css
+++ b/src/components/calculatorContainer/calculatorContainer.css
@@ -3,15 +3,17 @@
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(6, 1fr);
   border-radius: 30px;
-  /* border:2px solid black; */
   height: 500px;
   width: 400px;
-  /* padding: 10px; */
 }
 
 .display {
   grid-column: 1/5; 
   border-radius: 30px 30px 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 35px;
 }
 
 .AC, 
@@ -32,8 +34,8 @@
 .grid-item {
   border: 1px solid rgb(39, 39, 39);
   background: rgba(0, 0, 0, 0.787);
-  /* color: rgb(39, 39, 39); */
   color: greenyellow;
+  text-align: middle;
 }
 
 .grid-item:hover {
@@ -42,12 +44,15 @@
 
 /* make anchor tags take up full space of parent div */
 a {
-  display: inline-block;
   height: 100%; 
   width: 100%;
   text-decoration: none;
   color: greenyellow;
-  /* background: white; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+
 }
 
 a:hover {
