--- a/src/components/calculatorContainer/calculatorContainer.css
+++ b/src/components/calculatorContainer/calculatorContainer.css
@@ -11,8 +11,8 @@
   grid-column: 1/5; 
   border-radius: 30px 30px 0 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-end;
+  align-items: flex-end;
   font-size: 35px;
 }
 
@@ -56,5 +56,5 @@ a {
 }
 
 a:hover {
-  font-weight: bold;
+  font-size: 35px;
 }
