--- a/src/components/ButtonsComponent/buttonComponents.css
+++ b/src/components/ButtonsComponent/buttonComponents.css
@@ -1,3 +1,31 @@
-.AC {
+.AC,
+.zero {
   grid-column: 1/3;
+}
+
+.zero {
+  border-bottom-left-radius: 30px;
+}
+
+.equal {
+  grid-column: 4/5;
+  grid-row: 5/7;
+  border-bottom-right-radius: 30px;
+}
+
+/* make anchor tags take up full space of parent div */
+a {
+  height: 100%; 
+  width: 100%;
+  text-decoration: none;
+  color: greenyellow;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+
+}
+
+a:hover {
+  font-size: 35px;
 }
