--- a/src/components/ButtonsComponent/buttonComponents.css
+++ b/src/components/ButtonsComponent/buttonComponents.css
@@ -14,7 +14,7 @@
 }
 
 /* make anchor tags take up full space of parent div */
-a {
+button {
   height: 100%; 
   width: 100%;
   text-decoration: none;
@@ -23,9 +23,8 @@ a {
   justify-content: center;
   align-items: center;
   font-size: 30px;
-
 }
 
-a:hover {
+button:hover {
   font-size: 35px;
 }
