added checks for any user input errors

--- a/src/components/ButtonsComponent/buttonComponents.css
+++ b/src/components/ButtonsComponent/buttonComponents.css
@@ -18,7 +18,7 @@ button {
   height: 100%; 
   width: 100%;
   text-decoration: none;
-  color: greenyellow;
+  color: hotpink;
   display: flex;
   justify-content: center;
   align-items: center;
