--- a/src/components/calculatorContainer/calculatorContainer.css
+++ b/src/components/calculatorContainer/calculatorContainer.css
@@ -19,7 +19,7 @@
 .grid-item {
   border: 1px solid rgb(39, 39, 39);
   background: rgba(0, 0, 0, 0.787);
-  color: greenyellow;
+  color: hotpink;
   text-align: middle;
 }
 
